Dockerfile: use ENV to set java flags